bug fix where titles on about timeline was overflowing width, hotfix for twitter section - min-width is now computed by the hight of the title part

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -632,6 +632,7 @@ a.link_button.-white {
   hyphens: auto;
   @include media-query($small){
     font-size: 5rem;
+    width: calc(100% - 125px);
   };
   &:before {
     content: '';
